# nixops-proxmox

./: .gitignore  README.md  default.nix  overrides.nix  pyproject.toml  release.nix  setup.cfg  shell.nix
contrib/: pve-configure.sh
examples/: proxmox-info-example.nix  proxmox-profile.nix  proxmox-uefi.nix  srht-example.nix  trivial-proxmox.nix
images/: configuration.nix  nixpart-print-format.patch  nixpart-silence-sanity-check.patch
meta/nixcon_2020/: Makefile  talk.md
nixops_proxmox/: plugin.py  proxmox_utils.py
nixops_proxmox/backends/: options.py  proxmox.py
nixops_proxmox/nix/: default.nix  proxmox.nix
